--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>JavaScripts</title>
+  <meta charset="utf-8">  
   <meta name="description" content="The Javascript page" />
-  <meta name="author" content="Augusto Martinez" />
- 
-
+  <meta name="author" content="Augusto Martinez" />\
+  
+  <title>JavaScripts</title>
+  
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
